[package]
name = "ownable-std"
description = "utils library for lto ownable contracts"
version = "0.2.4"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_with = "2.0.1"
blake2 = "0.10.6"
sha2 = "0.10.6"
bs58 = "0.4.0"
secp256k1 = "0.26.0"
hex = "0.4.3"
sha3 = "0.7.2"
schemars = "0.8.8"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde_json = "1.0.59"
js-sys = "0.3.56"

[dev-dependencies]
