[package]
name = "ownable-std"
description = "utils library for lto ownable contracts"
version = "0.2.4"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_with = "2.0.1"
bs58 = "0.4.0"
schemars = "0.8.8"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde_json = "1.0.59"
js-sys = "0.3.56"

[dev-dependencies]
