[package]
name = "ownable-std-macros"
description = "proc macros for lto ownable contracts"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.54"
quote = "1.0.26"
syn = "1"
